[package]
name = "todoservice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
derive_builder = "0.12.0"
futures = "0.3.25"
mongodb = "2.3.1"
serde = "1.0.149"
thiserror = "1.0.37"
tokio = { version = "1.23.0", features = ["full"] }
